--- a/.github/workflows/update-models.yml
+++ b/.github/workflows/update-models.yml
@@ -1,5 +1,8 @@
 name: Update Ollama Models
 
+permissions:
+  contents: write
+
 on:
   schedule:
     - cron: "0 0 * * *" # 每天 UTC 00:00 运行
@@ -11,20 +14,30 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
         with:
-          node-version: "18"
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install dependencies
-        run: npm install
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
 
-      - name: Install Playwright browsers
-        run: npx playwright install chromium
+      - name: Install Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y chromium-browser chromium-chromedriver
 
-      - name: Update models data
-        run: npm run update-models
+      - name: Copy Python scripts
+        run: |
+          mkdir -p scripts
+          cp ref/update_models0.py scripts/
+          cp ref/update_models.py scripts/
+          cp ref/allinone.py scripts/
+
+      - name: Run update script
+        run: |
+          cd scripts
+          python allinone.py
 
       - name: Commit and push if changed
         run: |
